<resources>
    <string name="app_name">Ejemplos</string>
    <string name="lista_compra_v1">LISTA COMPRA V1</string>
    <string name="btInsertaItem">Insertar Item</string>
    <string name="lblNombreItem">Nombre</string>
    <string name="pistaNombreItem">Tomate</string>
    <string name="lblCantidadItem">Cantidad</string>
    <string name="btCancelar">Cancelar</string>
    <string name="btGuardar">Guardar</string>
    <string name="btBorrar">Borrar</string>
    <string name="error_borrando">Error al intentar borrar el elemento</string>
    <string name="seguro_de_borrar">¿Seguro qué deseas borrar? : </string>
    <string name="ejemplo_sencillo_bd">EJEMPLO SENCILLO BD</string>
    <string name="lblPhone">Telefono</string>
    <string name="lblName">Nombre</string>
    <string name="lblOk">Ok</string>
    <string name="msgNoContacts">No existen contactos</string>
    <string name="lblDeleteContact">Borrar Contacto</string>
    <string name="lblModifyContact">Editar Contacto</string>
    <string name="lblCallContact">Llamar al Contacto</string>
    <string name="lblCancel">Cancelar</string>
    <string name="msgInvalidPosition">Posición Inválida</string>
    <string name="msgNoCall">No es posible realizar la llamada</string>
    <string name="ajustes_v2">Ajustes V2 Fragment</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>
    <string name="caja_tittle">Carrito de la compra</string>
    <string name="lblProduct">Producto</string>
    <string name="lblProductPriceUni">Precio Und</string>
    <string name="lblTotal">Total</string>
    <string name="lblZero">0</string>
    <string name="lblEuro">€</string>

</resources>