<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_item_edition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.lista_compra_activity_v1.ItemEditionActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/lblNombreItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombre"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edNombre"
            android:layout_weight="1"
            android:hint="@string/pistaNombreItem"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/lblCantidadItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblCantidad"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:ems="10"
            android:id="@+id/edCantidad"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:gravity="right|center_vertical">

        <Button
            android:text="@string/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancelarItem"
            android:layout_weight="1" />

        <Button
            android:text="@string/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGuardarItem"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>