<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
   >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:textAlignment="center"
        android:text="@string/lblProduct"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_weight="0.2"
        android:text="@string/lblProductPriceUni"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_weight="0.2"
        android:text="@string/lblCantidadItem"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:textAlignment="center"
        android:text="@string/lblTotal"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
    >
<TextView
    android:id="@+id/lvProductsName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_weight="0.4"
    android:textSize="18sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/lvProductsPriceUni"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_weight="0.2"
    android:textSize="18sp" />

<TextView
    android:id="@+id/lvProductsCant"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_weight="0.2"
    android:textSize="18sp" />

<TextView
    android:id="@+id/lvProductsPriceTotal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_weight="0.2"
    android:textSize="18sp"
    android:textStyle="bold" />
</LinearLayout>
</LinearLayout>